--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,8 @@
 # markuru在处理markdown上太多问题了。且会造成超时错误，github不给生成站点 
 markdown: kramdown
 
-
 #permalink: /:categories/:year/:month/:day/:title 
 permalink: /:year/:month/:day/:title 
-#permalink: pretty
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 
@@ -25,7 +23,7 @@ pygments: true
 title : 学习法语的地方
 tagline: fancy tagline
 author :
-  name : lm ... 
+  name : laomeng
   email : blah@email.test
   #github : username
   #twitter : username
@@ -39,7 +37,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://rijiben.org/fayu/
+#production_url : http://rijiben.org/fayu/
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -68,7 +66,8 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  #BASE_PATH : false
+  BASE_PATH : /fayu 
+# use jekyll --safe to test locally
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
@@ -79,7 +78,6 @@ JB :
   #   /assets
   #
   #ASSET_PATH : false
-  ASSET_PATH : false
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change theme here if needed.
